--- a/cvpdf.html
+++ b/cvpdf.html
@@ -3,7 +3,7 @@
   <head>
 	   <meta charset="UTF-8"/>
   	   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-       <link rel="stylesheet" media="all" href="/CSS/style.css" />
+       <link rel="stylesheet" media="all" href="http://ivl.github.com/CSS/style.css" />
   </head>
 
   <body style="padding: 50px; width: 800px;">
